# celery-send-email

./: pyproject.toml  requirements.txt
main/: celery.py  settings.py
sendmail/: tasks.py
